<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RongPay</string>
    <string name="ip_invalid">Invalid ip</string>
    <string name="app_init">App is initializing</string>
    <string name="app_setting">AppSettings</string>
    <string name="unknown_err">Unknown error</string>
    <string name="len_err">Len is error</string>
    <string name="data_null">Data is null</string>
    <string name="input_err_reinput">Enter error,please enter again</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="restore">Restore</string>
    <string name="stay_tuned">Stay tuned</string>
    <string name="no_any_data">No any data</string>
    <string name="clear_data">Clear data</string>
    <string name="op_fail">Operation fail</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="submit">Submit</string>
    <string name="prompt">Prompt</string>
    <string name="next">Next</string>
    <string name="sending_content">Sending feedback and advice</string>
    <string name="app_exit">Click again to exit app</string>
    <string name="save_success">Save successfully</string>
    <string name="original_pass_err">Original pwd is error</string>
    <string name="appstore_not_install">Please install Rong Appstore</string>
    <string name="send_email">Send email</string>
    <string name="send_success">We have received your valuable advice and we will work harder</string>
    <string name="send_fail">Send fail and try later</string>
    <string name="send_email_hint">Please enter your valuable advice</string>

    <string name="is_revocation">Voided</string>
    <string name="is_completed">Completed</string>
    <string name="re_print">Reprint</string>
    <string name="not_any_record">No any record</string>
    <string name="pay_code">PayCode</string>
    <string name="card_num">CardNO</string>
    <string name="auth_code">AuthCode</string>
    <string name="voucher_num">TraceNO</string>
    <string name="amount">Amount</string>
    <string name="batch_num">BatchNO</string>
    <string name="trans_date">TransTime</string>
    <string name="trans_type">TransType</string>
    <string name="trans_sys_para">SysParas</string>
    <string name="trans_merchant_para">MerchantInfo</string>
    <string name="trans_master_pass_para">Modify master pwd</string>
    <string name="modify_maintain_pass">Modify maintain pwd</string>
    <string name="old_pass">OldPwd</string>
    <string name="new_pass">NewPwd</string>
    <string name="trans_scan_para">ScanParas</string>
    <string name="trans_void_pass">Whether Sale-Void needs pwd</string>
    <string name="trans_void_card">Whether Sale-Void needs card</string>
    <string name="trans_contactless_pboc">Whether force contactless PBOC</string>
    <string name="front_camera">Front camera</string>
    <string name="back_camera">Back Camera</string>
    <string name="online_trans">Online Trans</string>
    <string name="local_present">Local Presentation</string>
    <string name="errlog_list">Errlog list</string>
    <string name="android_setting">Android System Settings</string>
    <string name="feedback_advice">Feedback and advice</string>
    <string name="trace_no">TraceNo</string>
    <string name="batch_no">BatchNO</string>
    <string name="tpdu_no">TPDU</string>
    <string name="firm_no">FirmCode</string>
    <string name="print_num_choice">Print counts choice</string>
    <string name="reversal_counts_choice">Reversal counts choice</string>
    <string name="wait_user_time">Waiting user to response(s)</string>
    <string name="open_encrypt_track">Track encrypted On</string>
    <string name="open_play_voice">Play Voice Prompt</string>
    <string name="open_scan_beep">Beep prompt On</string>
    <string name="open_shine_light">Light On</string>
    <string name="camera_location_choice">Camera choice</string>
    <string name="merchant_id">Merchant ID</string>
    <string name="terminal_id">Terminal ID</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="wait_connect_time">Waiting network to response(s)</string>
    <string name="open_public_network">Public network On</string>
    <string name="public_network_ip">Public network IP</string>
    <string name="public_network_port">Public network Port</string>
    <string name="intranet_network_ip">Intranet IP</string>
    <string name="intranet_network_port">Intranet Port</string>
    <string name="please_input_masterkey_index">Please enter master key index</string>
    <string name="please_input_masterkey_data">Please enter master key data</string>
    <string name="please_chose_key_type">Please chose key system</string>
    <string name="des">DES</string>
    <string name="gm">GM</string>
    <string name="online_or_local">OnlineTrans or LocalPresentation</string>
    <string name="open_app_debug_output">Log output On</string>
    <string name="close_app_debug_output">Log output Off</string>
    <string name="launcher_style">Launcher Styles</string>
    <string name="classical_launcher">Classical</string>
    <string name="simple_launcher">Simple</string>
    <string name="customers_or_logo">Customers or LOGOs</string>
    <string name="please_input_amount">Please enter amount</string>
    <string name="please_input_master_pass">Please enter master pwd</string>
    <string name="please_input_trace_no">Please enter original VOUCHER NO</string>
    <string name="please_input_auth_code">Please enter original AuthCode</string>
    <string name="please_input_data_time">Please enter original TransDate</string>
    <string name="please_input_reference">Plesae enter original Reference</string>
    <string name="please_input_traceno_hint">Please enter TraceNO</string>
    <string name="scan">Scan</string>
    <string name="preauth">Pre-auths</string>
    <string name="salevoid">Void</string>
    <string name="query">QueryPrint</string>
    <string name="cash">Sales</string>
    <string name="management">Management</string>
    <string name="others">Others</string>
    <string name="trans_result">Transaction Result</string>
    <string name="find_result">Found Result</string>
    <string name="confirm_card_no">Please Confirm CardNo</string>
    <string name="swipe_card_right">Swipe card from POS right</string>
    <string name="insert_card_bootom">Insert card form POS bottom</string>
    <string name="pat_card_above">Tap card above POS top</string>
    <string name="prompt_door"> \n \nNewPos，Beyond Payment\n \n(Click to pay)</string>
    <string name="void_original_trans">Original Trans:</string>
    <string name="void_pay_code">Pay Code:</string>
    <string name="void_card_no">Card NO:</string>
    <string name="void_trace_no">VOUCHER NO:</string>
    <string name="void_auth_code">Auth Code:</string>
    <string name="void_batch_no">Batch NO:</string>
    <string name="void_amount">Amount:</string>
    <string name="void_time">Trans Time:</string>
    <item name="tag_item_user" type="id"></item>
    <item name="tag_item_history_trans" type="id"></item>
    <string name="chose_card_applist">Please chose card APPS</string>
    <string name="trans_is_void">Voided</string>
    <string name="trans_load_item">of the data has been loaded</string>
    <string name="trans_detail">Trans detail</string>
    <string name="printer_paper">Printer out of paper</string>
    <string name="printing_receipt">Printing receipt</string>
    <string name="unknown_trans">Invalid Transaction</string>
    <string name="qr_bar_code">Put the QR or NAR code into scan box</string>

    <string name="mis_success">Service registered, pls connect:</string>
    <string name="mis_fail">Service register fail</string>
    <string name="data_service">Pls install \"DataService\" firstly</string>
</resources>