<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#eeeeee"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:layout_height="45dp">
        <TextView
            android:text="@string/online_or_local"
            android:layout_width="wrap_content"
            android:textColor="#ff333333"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/pri_online_offlne"
                android:background="@android:color/transparent"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="23dp" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:layout_height="45dp">
        <TextView
            android:text="@string/open_app_debug_output"
            android:layout_width="wrap_content"
            android:textColor="#ff333333"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/pri_debug_nodebug"
                android:background="@android:color/transparent"
                android:src="@drawable/home2_setting_commun_open"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_width="47dp"
                android:layout_height="23dp" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="#FFFFFF"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_height="183dp">
        <TextView
            android:text="@string/launcher_style"
            android:layout_width="wrap_content"
            android:textColor="#ff333333"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:layout_height="0dp" />
        <View
            android:layout_width="match_parent"
            android:background="#EEEEEE"
            android:layout_height="1dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:layout_height="0dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/launcher_classical"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp" />
                <RadioButton
                    android:id="@+id/pri_style_class"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/classical_launcher"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/launcher_simple"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp" />
                <RadioButton
                    android:id="@+id/pri_style_simple"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/simple_launcher"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="#FFFFFF"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/customers_or_logo"
            android:layout_width="wrap_content"
            android:textColor="#ff333333"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:layout_height="0dp" />
        <View
            android:layout_width="match_parent"
            android:background="#EEEEEE"
            android:layout_height="1dp"/>
        <ListView
            android:id="@+id/pri_listview"
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:scrollbars="none"
            android:layout_height="0dp"/>
    </LinearLayout>
</LinearLayout>