<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#EEEEEE"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:layout_height="45dp">
        <TextView
            android:text="@string/wait_connect_time"
            android:layout_width="wrap_content"
            android:textColor="#ff333333"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/setting_com_timeout"
            android:background="@android:color/transparent"
            android:paddingTop="15dp"
            android:layout_marginRight="10dp"
            android:maxLength="2"
            android:inputType="number"
            android:gravity="right"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:layout_height="45dp">
        <TextView
            android:text="@string/open_public_network"
            android:layout_width="wrap_content"
            android:textColor="#ff333333"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/setting_com_public"
                android:background="@android:color/transparent"
                android:src="@drawable/home2_setting_commun_open"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_width="47dp"
                android:layout_height="23dp" />
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="#eeeeee"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="#FFFFFF"
        android:layout_height="45dp">
        <TextView
            android:text="@string/public_network_ip"
            android:layout_width="wrap_content"
            android:textColor="#ff333333"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />
        <cn.desert.newpos.payui.setting.view.IPEditText
            android:id="@+id/setting_com_public_ip"
            android:background="@android:color/transparent"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="#eeeeee"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="#FFFFFF"
        android:layout_height="45dp">
        <TextView
            android:text="@string/public_network_port"
            android:layout_width="wrap_content"
            android:textColor="#ff333333"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/setting_com_public_port"
            android:background="@android:color/transparent"
            android:layout_marginRight="10dp"
            android:inputType="number"
            android:maxLength="6"
            android:paddingTop="15dp"
            android:gravity="right"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:layout_height="45dp">
        <TextView
            android:text="@string/intranet_network_ip"
            android:layout_width="wrap_content"
            android:textColor="#ff333333"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />
        <cn.desert.newpos.payui.setting.view.IPEditText
            android:id="@+id/setting_com_inner_ip"
            android:background="@android:color/transparent"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="#eeeeee"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="#FFFFFF"
        android:layout_height="45dp">
        <TextView
            android:text="@string/intranet_network_port"
            android:layout_width="wrap_content"
            android:textColor="#ff333333"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/setting_com_inner_port"
            android:background="@android:color/transparent"
            android:paddingTop="15dp"
            android:layout_marginRight="10dp"
            android:inputType="number"
            android:maxLength="6"
            android:gravity="right"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>