<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/ll_swipe"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_height="0dp">
        <WebView
            android:id="@+id/webview_swipe"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:visibility="visible"
            android:layout_height="match_parent"/>
        <TextView
            android:text="@string/swipe_card_right"
            android:keepScreenOn="true"
            android:textStyle="bold"
            android:visibility="visible"
            android:layout_gravity="center"
            android:textColor="@color/gray"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/ll_insert"
        android:layout_weight="1"
        android:layout_height="0dp">
        <TextView
            android:text="@string/insert_card_bootom"
            android:keepScreenOn="true"
            android:textStyle="bold"
            android:visibility="visible"
            android:textColor="@color/gray"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <WebView
            android:id="@+id/webview_insert"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/ll_pat"
        android:layout_weight="1"
        android:layout_height="0dp">
        <WebView
            android:id="@+id/webview_pat"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:visibility="visible"
            android:layout_height="match_parent"/>
        <TextView
            android:text="@string/pat_card_above"
            android:keepScreenOn="true"
            android:layout_gravity="center"
            android:visibility="visible"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>