<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/trans_cardno_layout"
    android:orientation="vertical"
    android:background="#eeeeee"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_height="0dp">
        <TextView
            android:text="@string/confirm_card_no"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#333333"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <EditText
            android:id="@+id/cardno_display_area"
            android:background="@drawable/edit_white_shape"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:enabled="false"
            android:focusable="false"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="60dp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_margin="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:layout_height="0dp">
        <Button
            android:id="@+id/cardno_cancel"
            android:text="@string/cancel"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@drawable/btn_red_shape"
            android:textColor="#FFFFFF"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp" />
        <Button
            android:id="@+id/cardno_confirm"
            android:text="@string/confirm"
            android:layout_marginLeft="72px"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@drawable/btn_result_confirm_bg"
            android:textColor="#FFFFFF"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <ImageView
            android:scaleType="fitCenter"
            android:visibility="gone"
            android:id="@+id/trans_cardno_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>