<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:background="@drawable/icon_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <include
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        layout="@layout/welcome_whats_title"/>
    <TextView
        android:text="@string/online_or_local"
        android:id="@+id/welcome_1_tv"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textColor="#48495F"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:id="@+id/welcome_1_rg"
        android:layout_width="wrap_content"
        android:layout_below="@id/welcome_1_tv"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/welcome_1_rb_online"
            android:layout_width="wrap_content"
            android:textColor="#48495F"
            android:textStyle="bold"
            android:checked="true"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="10dp"
            android:text="@string/online_trans"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/welcome_1_rb_offline"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#48495F"
            android:checked="false"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/local_present"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <LinearLayout
        android:id="@+id/welcome_1_ll"
        android:layout_width="match_parent"
        android:layout_below="@id/welcome_1_rg"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:text="IP地址"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#48495F"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <cn.desert.newpos.payui.setting.view.IPEditText
                android:id="@+id/welcome_1_ip"
                android:background="@drawable/edittext_selector"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="35dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="端口"
                android:textColor="#48495F"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/welcome_1_port"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:maxLength="6"
                android:background="@drawable/edittext_selector"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="35dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>